--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^14.3.0"
   }
 }
